@@ -1,3 +1,7 @@
+2005-01-08  Sergey V. Udaltsov  <svu@gnome.org>
+
+	* gnome-settings-keyboard-xkb.c: fix #163299
+
 2005-01-07  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-settings-mouse.c: (set_locate_pointer): add Mod2Mask and 
